syntax = "proto3";

package querent.workflows;


// NamedWorkflows is a message to hold named workflows for semantic pipelines.
message NamedWorkflows {
  // Knowledge graph using Llama2 v1 workflow.
  string knowledge_graph_using_llama2_v1 = 1;
  // Knowledge graph using OpenAI workflow.
  OpenAIConfig knowledge_graph_using_openai = 2;
}

// OpenAIConfig is a message to hold configuration for an OpenAI workflow.
message OpenAIConfig {
  // API key of the OpenAI workflow.
  string openai_api_key = 1; // Corrected field name
}
